add black border to the textarea in bookDetail

--- a/src/main/resources/org/uet/library_management/ui/bookDetailPage.fxml
+++ b/src/main/resources/org/uet/library_management/ui/bookDetailPage.fxml
@@ -94,7 +94,10 @@
 
                         <Label styleClass="noteText" text="Review"/>
                         <HBox alignment="CENTER_LEFT">
-                            <TextArea fx:id="reviewArea" promptText="What do you think about this book?" prefWidth="500" prefRowCount="5"/>
+                            <TextArea fx:id="reviewArea" promptText="What do you think about this book?"
+                                      prefWidth="500" prefRowCount="5"
+                                      style="-fx-border-color: black"
+                            />
                         </HBox>
                         <Button fx:id="postButton" text="Post" onAction="#onPostCommentClicked" />
                     </VBox>
